--- a/src/App.css
+++ b/src/App.css
@@ -29,9 +29,15 @@
 }
 
 .Map-container {
-  width: 100%;
-  height: 100%;
-  margin-right: 10px;
+  width: 80vw;
+  max-height: 80vh;
+  min-height: 100px;
+  border: 1px white solid;
+  overflow: hidden;
+  border-radius: 10px;
+  box-sizing: border-box;
+
+  box-shadow: 1px 1px 5px 5px rgba(167, 162, 162, 0.54);
 }
 
 @keyframes App-logo-spin {
